feat(auth): login using oidc

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,9 @@ APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
+
+OIDC_PROVIDER=
+OIDC_CLIENT_ID=
+OIDC_CLIENT_SECRET=
+OIDC_REDIRECT_URL=
+OIDC_SCOPES=
