--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,11 @@ OIDC_REDIRECT_URL=
 OIDC_SCOPES=
 
 GOOGLE_APPLICATION_CREDENTIALS=
+
+CORS_PATH=*
+CORS_ALLOWED_METHODS=*
+CORS_ALLOWED_ORIGINS=*
+CORS_ALLOWED_HEADERS=
+CORS_EXPOSED_HEADERS=
+CORS_MAX_AGE=0
+CORS_SUPPORT_CREDENTIALS=true
