chore: oidc rp initiated logout

--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,8 @@ OIDC_CLIENT_ID=
 OIDC_CLIENT_SECRET=
 OIDC_REDIRECT_URL=
 OIDC_SCOPES=
+OIDC_END_SESSION_ENDPOINT=
+OIDC_POST_LOGOUT_REDIRECT_URI=
 
 GOOGLE_APPLICATION_CREDENTIALS=
 
@@ -19,3 +21,5 @@ CORS_ALLOWED_HEADERS=
 CORS_EXPOSED_HEADERS=
 CORS_MAX_AGE=0
 CORS_SUPPORT_CREDENTIALS=true
+
+SESSION_FIRESTORE_PROJECT_ID=
