docs: http session

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -11,3 +11,4 @@ nav:
       - Modul: basics/modul.md
       - Routing: basics/routing.md
       - Controllers: basics/controllers.md
+      - HTTP Session: basics/session.md
