--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -12,3 +12,4 @@ nav:
       - Routing: basics/routing.md
       - Controllers: basics/controllers.md
       - HTTP Session: basics/session.md
+      - Authentication: basics/authentication.md
