--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -14,3 +14,4 @@ nav:
       - Controllers: basics/controllers.md
       - HTTP Session: basics/session.md
       - Authentication: basics/authentication.md
+  - Dokumentasi OpenAPI 3.1: openapi-docs.md
