--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -15,3 +15,4 @@ nav:
       - HTTP Session: basics/session.md
       - Authentication: basics/authentication.md
   - Dokumentasi OpenAPI 3.1: openapi-docs.md
+  - Dokumentasi Project: project-docs.md
