--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
+# Konfigurasi aplikasi
 APP_NAME=dptsi-base-go
 APP_ENV=local
 APP_KEY=
@@ -5,16 +6,17 @@ APP_DEBUG=true
 APP_URL=http://localhost
 APP_FRONTEND_URL=
 
+# Dapat dari Secman
 OIDC_PROVIDER=
 OIDC_CLIENT_ID=
 OIDC_CLIENT_SECRET=
 OIDC_REDIRECT_URL=
-OIDC_SCOPES=
-OIDC_END_SESSION_ENDPOINT=
 OIDC_POST_LOGOUT_REDIRECT_URI=
+# Scope minimal yang diperlukan adalah "openid profile"
+OIDC_SCOPES="openid profile"
+OIDC_END_SESSION_ENDPOINT=https://dev-my.its.ac.id/signout
 
-GOOGLE_APPLICATION_CREDENTIALS=
-
+# Konfigurasi CORS untuk Frontend
 CORS_PATH=*
 CORS_ALLOWED_METHODS=*
 CORS_ALLOWED_ORIGINS=*
@@ -23,5 +25,21 @@ CORS_EXPOSED_HEADERS=
 CORS_MAX_AGE=0
 CORS_SUPPORT_CREDENTIALS=true
 
-SESSION_FIRESTORE_PROJECT_ID=
-SESSION_SQLITE_DB=
+# Konfigurasi session dengan SQL Server
+SESSION_DRIVER=sqlserver
+SESSION_SQLSERVER_HOST=localhost
+SESSION_SQLSERVER_PORT=1433
+SESSION_SQLSERVER_DATABASE=
+SESSION_SQLSERVER_USERNAME=
+SESSION_SQLSERVER_PASSWORD=
+
+# Konfigurasi session dengan Firestore
+# SESSION_DRIVER=firestore
+# SESSION_FIRESTORE_PROJECT_ID=
+
+# Konfigurasi session dengan SQLite
+# SESSION_DRIVER=sqlite
+# SESSION_SQLITE_DB=
+
+# Wajib diisi jika menggunakan Firestore, sesuaikan dengan lokasi file JSON yang digunakan
+GOOGLE_APPLICATION_CREDENTIALS=
