--- a/.env.example
+++ b/.env.example
@@ -18,9 +18,9 @@ OIDC_END_SESSION_ENDPOINT=https://dev-my.its.ac.id/signout
 
 # Konfigurasi CORS untuk Frontend
 CORS_PATH=*
-CORS_ALLOWED_METHODS=*
-CORS_ALLOWED_ORIGINS=*
-CORS_ALLOWED_HEADERS=
+CORS_ALLOWED_METHODS=GET,POST,PUT,DELETE,OPTIONS
+CORS_ALLOWED_ORIGINS=http://localhost:3001
+CORS_ALLOWED_HEADERS=content-type,x-csrf-token
 CORS_EXPOSED_HEADERS=
 CORS_MAX_AGE=0
 CORS_SUPPORT_CREDENTIALS=true
