docs(swagger): add version and description

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 # Konfigurasi aplikasi
 APP_NAME=dptsi-base-go
+APP_DESCRIPTION="Base Project Golang by DPTSI ITS"
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
