--- a/.env.example
+++ b/.env.example
@@ -13,8 +13,8 @@ OIDC_CLIENT_ID=
 OIDC_CLIENT_SECRET=
 OIDC_REDIRECT_URL=
 OIDC_POST_LOGOUT_REDIRECT_URI=
-# Scope minimal yang diperlukan adalah "openid profile"
-OIDC_SCOPES="openid profile"
+# Scope minimal yang diperlukan adalah "openid email profile role"
+OIDC_SCOPES="openid email profile role"
 
 # Konfigurasi CORS untuk Frontend
 CORS_PATH=*
