chore: postgresql gorm driver

--- a/.env.example
+++ b/.env.example
@@ -33,6 +33,14 @@ SESSION_SQLSERVER_DATABASE=
 SESSION_SQLSERVER_USERNAME=
 SESSION_SQLSERVER_PASSWORD=
 
+# Konfigurasi session dengan PostgreSQL
+SESSION_DRIVER=postgres
+SESSION_POSTGRES_HOST=
+SESSION_POSTGRES_PORT=
+SESSION_POSTGRES_DATABASE=
+SESSION_POSTGRES_USERNAME=
+SESSION_POSTGRES_PASSWORD=
+
 # Konfigurasi session dengan Firestore
 # SESSION_DRIVER=firestore
 # SESSION_FIRESTORE_PROJECT_ID=
