--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "commit-and-tag-version": "^12.0.0"
   },
   "scripts": {
-    "release": "commit-and-tag-version"
+    "release": "commit-and-tag-version",
+    "prerelease": "commit-and-tag-version --prerelease alpha"
   },
-  "version": "2.0.0-alpha.0"
+  "version": "2.0.0.alpha.0"
 }
