fix: .env not being read
feat: middleware service

--- a/.env.example
+++ b/.env.example
@@ -16,38 +16,11 @@ OIDC_POST_LOGOUT_REDIRECT_URI=
 # Scope minimal yang diperlukan adalah "openid email profile resource role"
 OIDC_SCOPES="openid email profile resource role"
 
-# Konfigurasi CORS untuk Frontend
-CORS_PATH=*
-CORS_ALLOWED_METHODS=GET,POST,PUT,DELETE,OPTIONS
-CORS_ALLOWED_ORIGINS=http://localhost:3001
-CORS_ALLOWED_HEADERS=content-type,x-csrf-token
-CORS_EXPOSED_HEADERS=
-CORS_MAX_AGE=0
-CORS_SUPPORT_CREDENTIALS=true
+# Konfigurasi database
+DB_DRIVER=
+DB_HOST=
+DB_PORT=
+DB_DATABASE=
+DB_USER=
+DB_PASSWORD=
 
-# Konfigurasi session dengan SQL Server
-SESSION_DRIVER=sqlserver
-SESSION_SQLSERVER_HOST=localhost
-SESSION_SQLSERVER_PORT=1433
-SESSION_SQLSERVER_DATABASE=
-SESSION_SQLSERVER_USERNAME=
-SESSION_SQLSERVER_PASSWORD=
-
-# Konfigurasi session dengan PostgreSQL
-SESSION_DRIVER=postgres
-SESSION_POSTGRES_HOST=
-SESSION_POSTGRES_PORT=
-SESSION_POSTGRES_DATABASE=
-SESSION_POSTGRES_USERNAME=
-SESSION_POSTGRES_PASSWORD=
-
-# Konfigurasi session dengan Firestore
-# SESSION_DRIVER=firestore
-# SESSION_FIRESTORE_PROJECT_ID=
-
-# Konfigurasi session dengan SQLite
-# SESSION_DRIVER=sqlite
-# SESSION_SQLITE_DB=
-
-# Wajib diisi jika menggunakan Firestore, sesuaikan dengan lokasi file JSON yang digunakan
-GOOGLE_APPLICATION_CREDENTIALS=
