--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,7 @@ APP_DESCRIPTION="Base Project Golang by DPTSI ITS"
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://localhost:8080
 APP_FRONTEND_URL=
 
 # Dapat dari Secman
