init sample product

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 # Konfigurasi aplikasi
-APP_NAME=dptsi-base-go
-APP_DESCRIPTION="Base Project Golang by DPTSI ITS"
+APP_NAME=sample-product
+APP_DESCRIPTION="Sample Tenant Product"
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
@@ -15,12 +15,3 @@ OIDC_REDIRECT_URL=
 OIDC_POST_LOGOUT_REDIRECT_URI=
 # Scope minimal yang diperlukan adalah "openid email profile resource role"
 OIDC_SCOPES="openid email profile resource role"
-
-# Konfigurasi database
-DB_DRIVER=
-DB_HOST=
-DB_PORT=
-DB_DATABASE=
-DB_USER=
-DB_PASSWORD=
-
